fixed bugs with spacing of things including nav bar and section headers

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p {
     color: #FFFFFF;
     width: 100%;
     padding: 20px 0px 20px 40px;
+    margin: 0px;
 }
 .content {
     margin: 20px 0px 20px 40px;
@@ -53,7 +54,7 @@ img {
     float: left;
     display: block;
     color: #f2f2f2;
-    text-align: center;
+    text-align: left;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -77,8 +78,6 @@ body {
     
       width: 100%;
     
-      max-width: 960px;
-    
       margin: 0 auto; }
     
     /* Make the nav take up the whole body width, and give it some top and bottom margin space */
@@ -100,7 +99,7 @@ body {
           margin: 0;
         
           padding: 0; }
-          
+
       nav ul li {
         
           width: 20%; }
